mgr/dashboard: fix navigation sidebar elements alignment
Currently the navigation sidebar elements are not aligned properly with the three bars for opening and closing the sidebar. This PR address that minor cleanup.

Fixes: https://tracker.ceph.com/issues/46621

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.scss
@@ -184,6 +184,7 @@ $sidebar-width: 200px;
         display: block;
         font-size: 1.1em;
         padding: 10px;
+        padding-left: 25px;
 
         text-decoration: none;
 
